Spacing fixes
iframe bottom space fix,
collaborators name spacing within menu,

--- a/style/style.css
+++ b/style/style.css
@@ -167,6 +167,7 @@ button {
     z-index: 3;
 }
 
+/* fixes button outline on firefox */
 @-moz-document url-prefix() {
     button {
       outline: none !important;  
@@ -373,13 +374,13 @@ header:hover {
 /* ---------- Artist's Social ---------- */
 .main-three {
     grid-area: main-three;
-    height: 80vh;
 }
 
 iframe {
     width: 100%;
-    height: 80vh;
+    height: 86vh;
     border: none;
+    display: block;
 }
 
 #split-iframe {
@@ -399,7 +400,7 @@ iframe {
     display: grid;
     grid-template-rows: repeat(20, auto);
     grid-auto-flow: column; 
-    grid-column-gap: 22%;
+    grid-column-gap: 20%;
     justify-content: center;
 }
 
@@ -411,7 +412,7 @@ ol {
 ol li {
     counter-increment: my-awesome-counter;
     font-size: 1.1em;
-    width: 125%;
+    width: 110%;
 }
 
 ol li::before {
@@ -429,7 +430,7 @@ ol li::before {
 
 .main-five {
     grid-area: main-five;
-    height: 80vh;
+    height: 82vh;
     min-height: 500px;
     background-color: #000;
     padding: 4%;
